--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,25 +1,11 @@
 /* Animations */
 @keyframes appear {
     0%{
-        top: -50px;
         opacity: 0%;
     }
     100%{
-        top: 0px;
         opacity: 100%;
     }
-}
-
-@keyframes floatUp {
-	0% {
-		transform: translatey(0px);
-	}
-	50% {
-		transform: translatey(-20px);
-	}
-	100% {
-		transform: translatey(0px);
-	}
 }
 
 @keyframes floatDown {
@@ -40,19 +26,26 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+
+}
+
+html{
+    scroll-behavior: smooth;
 }
 
 body{
     font-family: 'Poppins', sans-serif;
     color: white;
+    overflow-x: hidden;
 }
 
 /* NavBar */
 .navbar {
     font-size: 25px;
     font-weight: 600;
-    background-color: rgba(51, 66, 87, 0.8);
-    animation: fadeInDown 1s;
+    background-color: rgba(51, 66, 87, 0);
+    animation: appear 1s;
+    transition: background-color 0.3s;
 }
 
 .navbar .container .collapse ul li{
@@ -102,7 +95,7 @@ body{
     width: 200px;
     top: 200px;
     left: 200px;
-    animation: floatUp 6s ease-in-out infinite;
+    animation: floatDown 6s ease-in-out 1s infinite;
 }
 
 .home #sphere2{
@@ -110,7 +103,7 @@ body{
     width: 150px;
     top: 500px;
     left: 500px;
-    animation: floatDown 6s ease-in-out infinite;
+    animation: floatDown 6s ease-in-out 2s infinite;
 }
 
 .home #sphere3{
@@ -118,7 +111,7 @@ body{
     width: 250px;
     top: 300px;
     left: 1500px;
-    animation: floatUp 6s ease-in-out infinite;
+    animation: floatDown 6s ease-in-out infinite;
 }
 
 .home .container{
@@ -357,15 +350,15 @@ body{
 }
 
 .aboutUs .joinUs .container .cards .card #cardImage1{
-    background-image: url(image/network.png);
+    background-image: url(/assets/network.png);
 }
 
 .aboutUs .joinUs .container .cards .card #cardImage2{
-    background-image: url(image/mentor.png);
+    background-image: url(/assets/mentor.png);
 }
 
 .aboutUs .joinUs .container .cards .card #cardImage3{
-    background-image: url(image/cv.png);
+    background-image: url(/assets/cv.png);
 
 }
 
@@ -429,10 +422,15 @@ body{
 /* Champoin Prizes */
 .prize{
     min-height: 100vh;
-    display: flex;
-    align-items: center;
-    justify-content: center;
     background-image: linear-gradient(to bottom, #FFFFFF, #588BA5);
+}
+
+.prize .container{
+    height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 .prize .container h1{
@@ -440,12 +438,12 @@ body{
     font-weight: bolder;
     color: #334257;
     text-align: center;
-    margin-bottom: 50px;
+    margin-bottom: 25px;
 }
 
 .prize .container .cardGroup{
     display: flex;
-    justify-content: space-around;
+    justify-content: center;
 }
 
 .prize .container .cardGroup .card{
@@ -459,14 +457,45 @@ body{
     border-radius: 50px;
     height: 550px;
     margin: 20px;
-    width: 30%;
+    width: 400px;
     transition: 0.5s;
+    opacity: 0.5;
 }
 
 .prize .container .cardGroup .card:hover{
     box-shadow: 0 15px 20px 5px rgba(67, 83, 140, 1);
-    transform: translateY(-20px);
+    transform: translateY(-10px);
     transition: 0.5s;
+    opacity: 1;
+}
+
+.prize .container .cardGroup #firstPlace{
+    left: 150px;
+    z-index: 3;
+}
+
+.prize .container .cardGroup #firstPlace:hover{
+    z-index: 4;
+}
+
+.prize .container .cardGroup #secondPlace{
+    top: 50px;
+    z-index: 2;
+}
+
+.prize .container .cardGroup #secondPlace:hover{
+    z-index: 4;
+}
+
+.prize .container .cardGroup #thirdPlace{
+    top: 100px;
+    right: 150px;
+    z-index: 1;
+
+}
+
+.prize .container .cardGroup #thirdPlace:hover{
+    z-index: 4;
 }
 
 .prize .container .cardGroup h1{
@@ -475,37 +504,12 @@ body{
     margin-bottom: 20px;
 }
 
-.prize .container .cardGroup .card .fa-trophy{
-    font-size: 150px;
-    margin-bottom: 20px;
-}
-
-.prize .container .cardGroup .card #firstPlace{
-    color: #FFD700;
-}
-
-.prize .container .cardGroup .card #secondPlace{
-    color: #C0C0C0;
-}
-
-.prize .container .cardGroup .card #thirdPlace{
-    color: #CD7F32;
-}
-
 .prize .container .cardGroup .card .rewards{
     font-size: 24px;
 }
 
-.prize .container .cardGroup .card .rewards i{
-    margin-bottom: 20px;
-    margin-right: 10px;
-}
-
-.rank{
-    position: absolute;
-    top: 75px;
-    font-size: 50px;
-    color: #334257;
+.prize .container .cardGroup .card img{
+    height: 300px;
 }
 
 /* timeline */
@@ -537,7 +541,7 @@ body{
     display: flex;
     justify-content: space-;
     width: 65vw;
-    background-image: url("assets/path.png");
+    background-image: url("/assets/path.png");
     background-position: center;
     background-repeat: no-repeat;
 }
@@ -646,32 +650,456 @@ body{
     font-weight: 500;
 }
 
-/* mentor adn jury */
+/* mentor and jury */
 .mentorJury{
-    min-height: 200vh;
+    min-height: 100vh;
     background-image: linear-gradient(to bottom, #a3e0ff, #FFFFFF);
 }
 
+/* Mentor */
 .mentorJury .mentor{
     height: 100vh;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    text-align: center;
+    padding-top: 150px;
 }
 
 .mentorJury .mentor h1{
     color: #334257;
     font-weight: bolder;
+    display: block;
+    text-align: center;
+    margin-bottom: 50px;
+    font-size: 72px;
 }
 
-.mentorJury .jury{
-    height: 100vh;
+.mentorJury .mentor input{
+   height: 20px;
+   width: 20px;
+   margin: 0 5px;
+}
+
+div#carousel {
+    grid-row: 1 / 2;
+    grid-column: 1 / 11;
+    width: 100vw;
+    height: 500px;
     display: flex;
     align-items: center;
     justify-content: center;
+    overflow: hidden;
+    transform-style: preserve-3d;
+    perspective: 600px;
+    --items: 5;
+    --middle: 3;
+    --position: 1;
+    pointer-events: none;
+  }
+
+.mentorJury .mentor #carousel .item h1{
+    font-size: 36px;
+}
+
+#carousel div.item {
+    position: absolute;
+    width: 300px;
+    height: 400px;
+    background-image: linear-gradient(to bottom right, #B8C7DB, #FFFFFF);
+    --r: calc(var(--position) - var(--offset));
+    --abs: max(calc(var(--r) * -1), var(--r));
+    transition: all 0.25s linear;
+    transform: rotateY(calc(-10deg * var(--r)))
+      translateX(calc(-300px * var(--r)));
+    z-index: calc((var(--position) - var(--abs)));
+    border-radius: 20px;
+    padding: 20px;
+}
+
+#carousel div.item h1{
+    margin-bottom: 10px;
+}
+
+#carousel div.item h2{
+    color: black;
+    font-size: 24px;
+    font-weight: bold;
+}
+
+#carousel div.item img{
+    border-radius: 20px;
+    margin: 10px 0;
+    height: 200px;
+}
+
+#carousel div.item p{
+    color: black;
+    font-size: 16px;
+    font-weight: 400;
+}
+
+#carousel div.item:nth-of-type(1) {
+    --offset: 1;
+}
+#carousel div.item:nth-of-type(2) {
+    --offset: 2;
+}
+#carousel div.item:nth-of-type(3) {
+    --offset: 3;
+}
+#carousel div.item:nth-of-type(4) {
+    --offset: 4;
+}
+  #carousel div.item:nth-of-type(5) {
+    --offset: 5;
+}
+#carousel div.item:nth-of-type(6) {
+    --offset: 6;
+}
+#carousel div.item:nth-of-type(7) {
+    --offset: 7;
+}
+#carousel div.item:nth-of-type(8) {
+    --offset: 8;
+}
+#carousel div.item:nth-of-type(9) {
+    --offset: 9;
+}
+
+.mentorJury .mentor input:nth-of-type(1) {
+    grid-column: 2 / 3;
+    grid-row: 2 / 3;
+}
+
+.mentorJury .mentor input:nth-of-type(1):checked ~ div#carousel {
+    --position: 1;
+}
+
+.mentorJury .mentor input:nth-of-type(2) {
+    grid-column: 3 / 4;
+    grid-row: 2 / 3;
+}
+.mentorJury .mentor input:nth-of-type(2):checked ~ div#carousel {
+    --position: 2;
+}
+
+.mentorJury .mentor input:nth-of-type(3) {
+    grid-column: 4 /5;
+    grid-row: 2 / 3;
+}
+.mentorJury .mentor input:nth-of-type(3):checked ~ div#carousel {
+    --position: 3;
+}
+
+.mentorJury .mentor input:nth-of-type(4) {
+    grid-column: 5 / 6;
+    grid-row: 2 / 3;
+}
+.mentorJury .mentor input:nth-of-type(4):checked ~ div#carousel {
+    --position: 4;
+}
+
+.mentorJury .mentor input:nth-of-type(5) {
+    grid-column: 6 / 7;
+    grid-row: 2 / 3;
+}
+.mentorJury .mentor input:nth-of-type(5):checked ~ div#carousel {
+    --position: 5;
+}
+
+.mentorJury .mentor input:nth-of-type(6) {
+    grid-column: 7 / 8;
+    grid-row: 2 / 3;
+}
+
+.mentorJury .mentor input:nth-of-type(6):checked ~ div#carousel {
+    --position: 6;
+}
+
+.mentorJury .mentor input:nth-of-type(7) {
+    grid-column: 8 / 9;
+    grid-row: 2 / 3;
+}
+.mentorJury .mentor input:nth-of-type(7):checked ~ div#carousel {
+    --position: 7;
+}
+
+.mentorJury .mentor input:nth-of-type(8) {
+    grid-column: 9 / 10;
+    grid-row: 2 / 3;
+}
+.mentorJury .mentor input:nth-of-type(8):checked ~ div#carousel {
+    --position: 8;
+}
+
+.mentorJury .mentor input:nth-of-type(9) {
+    grid-column: 10 / 11;
+    grid-row: 2 / 3;
+}
+.mentorJury .mentor input:nth-of-type(9):checked ~ div#carousel {
+    --position: 9;
+}
+
+
+/* Jury */
+.mentorJury .jury{
+    height: 80vh;
+    text-align: center;
 }
 
 .mentorJury .jury h1{
     color: #334257;
     font-weight: bolder;
+    text-align: center;
+    font-size: 72px;
+    margin-bottom: 50px;
+}
+
+.mentorJury .jury input{
+    height: 20px;
+    width: 20px;
+    margin: 0 5px;
+ }
+
+ div#Jurycarousel {
+     grid-row: 1 / 2;
+     grid-column: 1 / 5;
+     width: 100vw;
+     height: 500px;
+     display: flex;
+     align-items: center;
+     justify-content: center;
+     overflow: hidden;
+     transform-style: preserve-3d;
+     perspective: 600px;
+     --items: 5;
+     --middle: 3;
+     --position: 1;
+     pointer-events: none;
+   }
+
+ #Jurycarousel div.item {
+     position: absolute;
+     width: 300px;
+     height: 400px;
+     background-image: linear-gradient(to bottom right, #B8C7DB, #FFFFFF);
+     --r: calc(var(--position) - var(--offset));
+     --abs: max(calc(var(--r) * -1), var(--r));
+     transition: all 0.25s linear;
+     transform: rotateY(calc(-10deg * var(--r)))
+       translateX(calc(-300px * var(--r)));
+     z-index: calc((var(--position) - var(--abs)));
+     border-radius: 20px;
+     padding: 20px;
+ }
+
+ #Jurycarousel div.item h1{
+     margin-bottom: 10px;
+ }
+
+ #Jurycarousel div.item h2{
+     color: black;
+     font-size: 24px;
+     font-weight: bold;
+ }
+
+ #Jurycarousel div.item img{
+     border-radius: 20px;
+     margin: 10px 0 20px 0;
+     height: 240px;
+ }
+
+ #Jurycarousel div.item p{
+     color: black;
+     font-size: 16px;
+     font-weight: 400;
+ }
+
+ #Jurycarousel div.item:nth-of-type(1) {
+     --offset: 1;
+ }
+ #Jurycarousel div.item:nth-of-type(2) {
+     --offset: 2;
+ }
+ #Jurycarousel div.item:nth-of-type(3) {
+     --offset: 3;
+ }
+
+ .mentorJury .jury input:nth-of-type(1) {
+     grid-column: 2 / 3;
+     grid-row: 2 / 3;
+ }
+
+ .mentorJury .jury input:nth-of-type(1):checked ~ div#Jurycarousel {
+     --position: 1;
+ }
+
+ .mentorJury .jury input:nth-of-type(2) {
+     grid-column: 3 / 4;
+     grid-row: 2 / 3;
+ }
+ .mentorJury .jury input:nth-of-type(2):checked ~ div#Jurycarousel {
+     --position: 2;
+ }
+
+ .mentorJury .jury input:nth-of-type(3) {
+     grid-column: 4 /5;
+     grid-row: 2 / 3;
+ }
+ .mentorJury .jury input:nth-of-type(3):checked ~ div#Jurycarousel {
+     --position: 3;
+ }
+
+ /* FAQ */
+ .faq{
+     min-height: 100vh;
+     text-align: center;
+     background-image: linear-gradient(to bottom, white, #334257);
+     display: flex;
+     flex-direction: column;
+     align-items: center;
+     align-items: center;
+     padding-top: 150px;
+ }
+
+ .faq h1{
+     font-size: 64px;
+     font-weight: bolder;
+     color: #7483B9;
+ }
+
+.faq .faqContainer{
+    height: fit-content;
+    display: flex;
+    padding: 0 150px;
+    width: 100vw;
+}
+
+ .faq .faqContainer .faqImg{
+     width: 40%;
+     background: url("/assets/faq.png");
+     height: 500px;
+     background-size: contain;
+     background-position: center;
+     background-repeat: no-repeat;
+ }
+
+.faq .faqContainer .accordion{
+    width: 50%;
+    margin-top: 75px;
+    color: #7483b9;
+}
+
+.faq .faqContainer .accordion .accordion-item{
+    background-color: #d1e4ff;
+    border-radius: 15px;
+    margin: 10px 0;
+    font-size: 18px;
+}
+
+.faq .faqContainer .accordion .accordion-item h2 button{
+    font-weight: bold;
+    color: #7483B9;
+    background-color: rgba(116, 131, 185, 0.2);
+    border-radius: 15px;
+    font-size: 18px;
+}
+
+/* footer */
+footer{
+    background-color: #334257;
+}
+
+.socialContainer a{
+    text-decoration: none;
+    font-size: 20px;
+}
+
+.socialContainer{
+    display: flex;
+    width: 60%;
+    justify-content: space-between;
+}
+
+.socialContainer .email{
+    background-color: white;
+    width: 50px;
+    height: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #EA4335;
+    border-radius: 50%;
+    transition: 0.5s;
+}
+.socialContainer .email:hover{
+    background-color: #EA4335;
+    color: white;
+    transition: 0.5s;
+}
+
+.socialContainer .facebook{
+    background-color: white;
+    width: 50px;
+    height: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #3b5998;
+    border-radius: 50%;
+    transition: 0.5s;
+}
+.socialContainer .facebook:hover{
+    background-color: #3b5998;
+    color: white;
+    transition: 0.5s;
+}
+
+.socialContainer .twitter{
+    background-color: white;
+    width: 50px;
+    height: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #08a0e9;
+    border-radius: 50%;
+    transition: 0.5s;
+}
+.socialContainer .twitter:hover{
+    background-color: #08a0e9;
+    color: white;
+    transition: 0.5s;
+}
+
+.socialContainer .linkedin{
+    background-color: white;
+    width: 50px;
+    height: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #0077b5;
+    border-radius: 50%;
+    transition: 0.5s;
+}
+.socialContainer .linkedin:hover{
+    background-color: #0077b5;
+    color: white;
+    transition: 0.5s;
+}
+
+.socialContainer .instagram{
+    background-color: white;
+    width: 50px;
+    height: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #DD2A7B;
+    border-radius: 50%;
+    transition: 0.5s;
+}
+.socialContainer .instagram:hover{
+    background-color: #DD2A7B;
+    color: white;
+    transition: 0.5s;
 }
