--- a/public/css/registration.css
+++ b/public/css/registration.css
@@ -18,11 +18,11 @@ body{
     color: white;
     opacity: 0.5; /* Firefox */
 }
-  
+
 :-ms-input-placeholder { /* Internet Explorer 10-11 */
     color: rgba(255, 255, 255, 0,5);
 }
-  
+
 ::-ms-input-placeholder { /* Microsoft Edge */
     color: rgba(255, 255, 255, 0,5);
 }
@@ -30,14 +30,14 @@ body{
 .container{
     height: 100%;
     width: 100%;
-    background-image: url(assets/Vector\ 2.png);
+    background-image: url(/assets/Vector\ 2.png);
     background-repeat: no-repeat;
     background-size: 900px;
     background-position: left;
     padding: 0;
     margin: 0;
     display: flex;
-}  
+}
 
 .container .left{
     height: 100vh;
@@ -82,7 +82,7 @@ body{
     font-size: 24px;
 }
 
-.container .right form label{ 
+.container .right form label{
     font-weight: 500;
 }
 
@@ -101,7 +101,7 @@ body{
 
 .container .right form .groupInput input{
     border: none;
-    background: none; 
+    background: none;
     margin-left: 15px;
     margin-bottom: 5px;
     color: white;
@@ -115,7 +115,7 @@ body{
 
 .container .right form .groupInput input::after{
     border: none;
-    background: none; 
+    background: none;
     color: white;
 }
 
@@ -143,12 +143,12 @@ body{
     -webkit-appearance: none;
     transform: translateY(4px);
 }
-  
+
 .container .right form .statusForm input[type=radio]:checked {
     background: url(data:image/gif;base64,R0lGODlhAQABAPAAAP///////yH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==) no-repeat center center;
     background-size: 20px 20px;
 }
-  
+
 .container .right form .statusForm input[type=radio]:focus {
     outline-color: transparent;
 }
