--- a/public/css/home.css
+++ b/public/css/home.css
@@ -7,16 +7,19 @@
   body {
     font-family: "Poppins", sans-serif;
     color: #ffff;
-    background-image: linear-gradient(to bottom right, #547CA8, #e4e4e4);
+    background-image: linear-gradient(to bottom right, #547ca8, #e4e4e4);
     min-height: 180rem;
   }
 
   /* NavBar-start */
-
+  .navbar-brand {
+    width: 200px;
+  }
   .navbar {
     font-size: 23px;
-    font-weight: 600;
+    font-weight: 400;
     background-color: rgba(0, 0, 0, 0.04);
+    letter-spacing: 5px;
     /* padding: 18px 50px; */
   }
 
@@ -44,17 +47,77 @@
 
   /* fitur */
 
-  .container{
-      height: 40vh;
+  .container {
+    height: 25vh;
   }
 
-thead{
-    background-color: #548ca879;
-}
+  thead {
 
-  tbody{
+  background-color: #548ca87d;
+    border-bottom: 8px solid #548ca8ab;
+   /* box-shadow: 100px black; */
+  }
+
+  tbody {
     background-color: #ffff;
   }
-  tr{
-    margin: 2px;
+  tbody > tr {
+    border-bottom: 8px solid #548ca8ab;
+  }
+
+  /* table{
+    /* border:2px solid #548ca8ab !important ;
+    box-shadow: 100px !important;
+  }  */
+
+  .btn {
+    font-size: 20px;
+    border-radius: 50px;
+    padding: 10px 50px;
+    background: #ffff;
+    border: 2px solid #547da875;
+    color: #548ca8;
+    font-weight: bold;
+  }
+
+  .btn:hover {
+    background: white;
+    border: 2px solid #dadff1;
+    color: #334257;
+    transition: 0.5s;
+  }
+
+  .btn:focus {
+    box-shadow: none;
+  }
+
+  .btnfiltersort {
+    background-color: #ffff;
+    border-radius: 15px;
+  }
+
+  .search{
+    height: 55px;
+  }
+
+  td >.unverified{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #7382b83f !important;
+    width : 10rem;
+    border-radius: 25px;
+    color: red;
+    padding: 15px;
+  }
+
+  .verified{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #7382b83f !important;
+    width : 10rem;
+    border-radius: 25px;
+    color: #67B668;
+    padding: 15px;
   }
